[project]
name = "airona"
version = "0.1.0"
description = "A Discord bot that reminds you about raids."
readme = "README.md"
authors = [
    { name = "kuwifuwa" },
    { name = "aruraune" }
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.0",
    "hikari>=2.5.0",
    "hikari-arc>=2.1.1",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
airona = "airona:main"
airona-init-db = "airona:init_db"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
